# dlq-acronym-generator

./: README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml
dlq_acronym_generator/: D_Words.txt  D_Words_Verbs.txt  dlq_acronym_generator.py
tests/: pyproject.toml  test_dlq_acronym_generator.py
tests/dlq_acronym_generator/: L_Words.txt  L_Words_Verbs.txt  Q_Words.txt
